[gd_scene load_steps=3 format=3 uid="uid://b7vp8pirt281d"]

[ext_resource type="Script" path="res://Win Scene/win_scene.gd" id="1_lo13s"]

[sub_resource type="LabelSettings" id="LabelSettings_tdi0d"]
font_size = 80

[node name="WinScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lo13s")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.564706, 0.596078, 0.87451, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -297.0
offset_top = -263.0
offset_right = 794.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAYER 1 WINS"
label_settings = SubResource("LabelSettings_tdi0d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 211.0
offset_top = 346.0
offset_right = 454.0
offset_bottom = 529.0

[node name="PlayAgain" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Play Again"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Main Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[connection signal="button_down" from="VBoxContainer/PlayAgain" to="." method="_on_play_again_button_down"]
[connection signal="button_down" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_button_down"]
[connection signal="button_down" from="VBoxContainer/Quit" to="." method="_on_quit_button_down"]
